--- a/package.json
+++ b/package.json
@@ -2,17 +2,16 @@
     "author": "mshanemc <shane.mclaughlin@salesforce.com>",
     "bugs": "https://github.com/mshanemc/sfdx-sosl/issues",
     "dependencies": {
-        "@mshanemc/plugin-helpers": "^2.0.1",
-        "@oclif/config": "^1.17.0",
         "@salesforce/command": "^3.0.3",
-        "@salesforce/dev-config": "^2.0.0",
         "chalk": "^4.1.0"
     },
     "description": "> TODO: description",
     "devDependencies": {
+        "@mshanemc/plugin-helpers": "^2.0.5",
+        "@oclif/config": "^1.17.0",
         "@oclif/dev-cli": "^1.22.2",
+        "@salesforce/dev-config": "^2.0.0",
         "@types/jest": "^26.0.14",
-        "@types/xml2js": "^0.4.5",
         "@typescript-eslint/eslint-plugin": "^4.3.0",
         "@typescript-eslint/parser": "^4.3.0",
         "eslint": "^7.10.0",
@@ -41,7 +40,7 @@
         "/lib",
         "/messages"
     ],
-    "homepage": "https://github.com/mshanemc/streaming-sfdx",
+    "homepage": "https://github.com/mshanemc/sfdx-sosl",
     "husky": {
         "hooks": {
             "pre-commit": "lint-staged"
@@ -54,7 +53,7 @@
             "git add"
         ]
     },
-    "name": "@mshanemc/plugin-streaming",
+    "name": "@mshanemc/sfdx-sosl",
     "oclif": {
         "bin": "sfdx",
         "commands": "./lib/commands",
@@ -62,14 +61,14 @@
             "@oclif/plugin-help"
         ]
     },
-    "repository": "mshanemc/streaming-sfdx",
+    "repository": "mshanemc/sfdx-sosl",
     "scripts": {
         "build": "rimraf lib && tsc",
         "clean": "rimraf .oclif.manifest.json",
         "postpublish": "yarn run clean; git push; git push --tags",
         "posttest": "yarn test:clean",
         "prepare": "yarn run build && oclif-dev manifest && yarn test:clean",
-        "prepublishOnly": "yarn run build && oclif-dev manifest",
+        "prepublishOnly": "rimraf yarn-error.log; yarn run build && oclif-dev manifest",
         "preversion": "yarn run clean",
         "test": "yarn run prepare && jest --runInBand",
         "test:clean": "rimraf testProject*",
@@ -79,5 +78,5 @@
         "version": "oclif-dev readme && git add README.md",
         "prettier": "prettier --write src/**/**/*.ts && prettier --write src/**/*.ts && prettier --write src/*.ts && prettier --write test/**/*.ts && prettier --write test/**/**/*.ts"
     },
-    "version": "1.1.7"
+    "version": "1.0.0"
 }
